Added a line asking for the user's age

--- a/Lab6.ipynb
+++ b/Lab6.ipynb
@@ -22,7 +22,8 @@
    ],
    "source": [
     "name = input(\"What is your name?\")\n",
-    "#"
+    "#\n",
+    "age = input(\"What is your age?\")"
    ]
   },
   {
